--- a/app/assets/stylesheets/notes/serach.css
+++ b/app/assets/stylesheets/notes/serach.css
@@ -130,7 +130,7 @@ margin-left: 30%;
 }
 
 .show_providers{
-
+margin-top: 5%;
 	margin-bottom:90px;
 
 }
@@ -176,7 +176,7 @@ margin-left: 30%;
  
  	width:100%;
  	position:relative;
- 	margin-top:10px;
+ 
  	margin-bottom:1px;
 
  	border-radius: 0px;
