--- a/app/views/notes/lesson.html.erb
+++ b/app/views/notes/lesson.html.erb
@@ -15,9 +15,13 @@
 <div class="left-other-housing">
 
  <div class="other-jobs-menu">
-  <h2>習い事</h2>
 
-  <ul>
+
+
+   習い事カテゴリ
+   <br/>
+   <br/>
+
    <li>語学</li>
    <li>音楽</li>
    <li>Web・デザイン</li>
@@ -30,7 +34,7 @@
    <li>美容</li>
    <li>ファッション</li>
    <li>ものづくり</li>
-  </ul>
+
  <br>
  <br>
 
