--- a/app/views/notes/event.html.erb
+++ b/app/views/notes/event.html.erb
@@ -14,8 +14,10 @@
   <div class="other-jobs-menu">
 
 
-   <h4>イベントカテゴリ</h4>
 
+   イベントカテゴリ
+   <br/>
+   <br/>
 
    <li>司会・MC</li>
    <li>ダンサー</li>
@@ -42,6 +44,7 @@
  </ul>
 </div>
 </div>
+
 
 
 <div class="services_right_wrapper">
