--- a/app/views/notes/health.html.erb
+++ b/app/views/notes/health.html.erb
@@ -12,9 +12,10 @@
  <div class="left-other-housing">
   <div class="other-jobs-menu">
 
-  <h2>健康</h2>
-  <ul>
 
+ 健康カテゴリ
+   <br/>
+   <br/>
 
    <li>マッサージ</li>
    <li>カウンセリング</li>
@@ -31,8 +32,7 @@
    <li>ヨガ</li>
    <li>コーチング</li>
 
-   
- </ul>
+
  <br><br>
 
  <h2>ご利用にあたって</h2>
@@ -42,6 +42,7 @@
  </ul>
 </div>
 </div>
+
 
 
 <div class="services_right_wrapper">
