--- a/app/assets/stylesheets/notes/serach.css
+++ b/app/assets/stylesheets/notes/serach.css
@@ -164,28 +164,36 @@ margin-top: 5%;
 	margin-left:0%;
 }
 
+.title h2{
+	font-size: 16px;
+}
+
   .services_right_wrapper{
     width:100%;
 
     margin-left: 0px;
  }
 
+
+
+.service_catchcopy_top{
+display:none;
+}
+
  .provider_job{
  	
- 	height:210px;
- 
- 	width:100%;
+ 	height:200px;
+ margin-left: 3%;
+ 	width:93%;
  	position:relative;
- 
  	margin-bottom:1px;
-
  	border-radius: 0px;
  }
  
 .provider_service_image{
  	border-radius:0px;
  	width:33%;
- 	height:80%;
+ 	height:90%;
  	float:left;
  	padding:0px;
  	}
