--- a/app/assets/stylesheets/providers/profile.css
+++ b/app/assets/stylesheets/providers/profile.css
@@ -31,6 +31,7 @@
 }
 
 
+
 .provider-introduction_profile h1{
 	margin-top:40px;
 	width:100%; 
@@ -52,3 +53,46 @@
 	padding-right:0px;
 	padding-top:10px
 }
+
+
+
+
+
+
+
+/* ipad iphone6+PLUSから大きめのスマホのレスポンシブデザイン */
+@media screen and (max-width: 414px) {
+
+
+
+
+.provider-introduction_profile h1{
+	margin-top:0px;
+	margin-bottom: 20px;
+}
+
+
+
+.provider_main_pic{
+	width:100%;
+	height:45%;
+	margin-right:0px;
+	float:left;
+	border-radius:2%;
+	margin-bottom: 9%;
+}
+
+
+}
+
+
+
+ @media screen and (min-width: 800px) {
+
+
+a.return{
+	display:none;
+}
+
+}
+
