--- a/app/views/home/pro.html
+++ b/app/views/home/pro.html
@@ -8,70 +8,61 @@
 
      <p>集客・口コミ集め・お客様との連絡・サービス管理などのサポートをさせていただきます</p>
 
-      <% if user_signed_in? %>
-      <div class="bootstrap">
-        <%= link_to "サービスを掲載する", '/notes/new', class: "btn btn-lg btn-primary" %></div>
-         <% end %>
+       <div class="bootstrap"><%= link_to "プロバイダーとして参加", 'http://goo.gl/forms/y9P0l9bh5OFkPs1J3', class: "btn btn-lg btn-primary" %></div>
     </div>
   </div>
 
 
 
-<div class="explain-seekle-wrapper">
- <div class="container">
+<div class="explain-provider-wrapper">
+
     <div class="Seekle-heading">
      <h2>サービス提供者として活躍しませんか</h2>
       <p>実際にあなたのサービスを必要としている人を見つけ、Seekleを通して集客をすることができます。<br>
       開業し、独立したがお客さんが少ない、いろんな人に自分の提供するサービスを知ってもらえる機会がない。<br>などのお悩みを解決します！</p>
     </div>
-  </div>
+
 </div>
 
 
 <div class="about-seekle-wrapper">
-   <div class="container">
-     <div class="reasons">
-       <div class="reason">
-       <div class="icons">
-    <i class="fa fa-clock-o fa-5x"></i>
-     </div>
+
+ <div class="reasons">
+   <div class="icons">
+    <i class="fa fa-clock-o fa-5x"></i></div>
     <h2>ホームページ作成不要！</h2>
-<p>店舗のホームページを作るのは大変。。<br>お金を払って外注するか、自分でサイトを作成しなければなりません。作っても検索エンジンの上位に上がるのは大手の会社が多いのです。Seekleでは頑張れば頑張るほど、あなたのサービスが上位に上がり広告塔となります！</p>
-        </div>
-  </div>
-     <div class="reasons">
-       <div class="reason">
-       <div class="icons">
-        <i class="fa fa-user fa-5x"></i>
-        </div>
-      <h2>登録費、掲載費無料！</h2>
-
-<p>お客さんとの契約が成立してから手数料の15%をいただきます。それまでの登録料、掲載費は全て無料！
-</p>
-        </div>
+    <p>店舗のホームページ外注するか、作っても検索エンジンの上位に上がるのは大手の会社が多い。。Seekleでは頑張れば頑張るほど、あなたのサービスが目立つ広告塔となります！</p>
   </div>
 
-     <div class="reasons">
-       <div class="reason">
-       <div class="icons">
-      <i class="fa fa-bullhorn fa-5x"></i>
-     </div>
-   <h2>口コミを集めましょう！</h2>
-<p>サービス提供後、お客さんがサービスに対してのレビューを書きます。たくさんの良い口コミを集めてたくさんの人に人気店舗として知ってもらいましょう！</p>
-        </div>
+  <div class="reasons2">
+   <div class="icons"><i class="fa fa-user fa-5x"></i> </div>
+   <h2>登録費、掲載費無料！</h2>
+
+   <p>お客さんとの契約が成立してから手数料の15%をいただきます。それまでの登録料、掲載費は全て無料！
+   </p>
+
+ </div>
+
+
+ <div class="reasons2">
+   <div class="icons">
+    <i class="fa fa-bullhorn fa-5x"></i></div>
+    <h2>口コミを集めましょう！</h2>
+    <p>サービス提供後、お客さんがサービスに対してのレビューを書きます。たくさんの良い口コミを集めてたくさんの人に人気店舗として知ってもらいましょう！</p>
   </div>
-  </div>
-  </div>
+
+
+</div>
 
 
   <div class="message-wrapper">
-    <div class="container">
+
       <div class="heading">
         <h2>あなたもプロバイダーとして参加しませんか？</h2>
         <h3 id="tagline">Let's find customers who need you!</h3>
       </div>
       <%= link_to "プロバイダーとして参加",'http://goo.gl/forms/y9P0l9bh5OFkPs1J3', class: "btn message signup-show" %>
-    </div>
+    
   </div>
 
 
