--- a/app/views/home/pro.html
+++ b/app/views/home/pro.html
@@ -1,4 +1,4 @@
-<h1><%= @message %></h1>
+
 
  <div class="pro-top-wrapper">
 
@@ -8,7 +8,7 @@
 
      <p>集客・口コミ集め・お客様との連絡・サービス管理などのサポートをさせていただきます</p>
 
-       <div class="bootstrap"><%= link_to "プロバイダーとして参加", 'http://goo.gl/forms/y9P0l9bh5OFkPs1J3', class: "btn btn-lg btn-primary" %></div>
+       <div class="bootstrap"><%= link_to "サービス提供者として参加", 'http://goo.gl/forms/y9P0l9bh5OFkPs1J3', class: "btn btn-lg btn-primary" %></div>
     </div>
   </div>
 
@@ -58,10 +58,10 @@
   <div class="message-wrapper">
 
       <div class="heading">
-        <h2>あなたもプロバイダーとして参加しませんか？</h2>
+        <h2>あなたもサービス提供者として参加しませんか？</h2>
         <h3 id="tagline">Let's find customers who need you!</h3>
       </div>
-      <%= link_to "プロバイダーとして参加",'http://goo.gl/forms/y9P0l9bh5OFkPs1J3', class: "btn message signup-show" %>
+      <%= link_to "サービス提供者として参加",'http://goo.gl/forms/y9P0l9bh5OFkPs1J3', class: "btn message signup-show" %>
     
   </div>
 
