--- a/app/views/home/index.html
+++ b/app/views/home/index.html
@@ -3,14 +3,15 @@
 <%= render 'home/header/dashboardhead' %>
 
 <div class="top-wrapper">
- <div class="background-image">
-  <a img="https://static.pexels.com/photos/7075/people-office-group-team.jpg">
+ <div class="-image">
+  <a img="https://statbackgroundic.pexels.com/photos/7075/people-office-group-team.jpg">
   </a>
 </div>
 
 <h1>明確な業者比較に簡単オンライン予約！</h1>
 <p>No More 業者選びの失敗！</p>
-<div class="bootstrap"><%= link_to "プロバイダーとして参加", 'http://goo.gl/forms/y9P0l9bh5OFkPs1J3', class: "btn btn-lg btn-primary" %></div>
+<div class="bootstrap"><%= link_to "あなたのサービスを掲載する", home_pro_path, class: "btn btn-lg btn-primary" %></div>
+
 </div>
 
 <div class="web-menu-var">
@@ -97,8 +98,8 @@
    <div class=icons>
     <i class="fa fa-users fa-5x"></i>
   </div>
-  <h2>プロバイダーとは</h2>
-  <p>サービスを提供する提供者のことです。プロフィール、口コミ、サービス価格などの様々な情報から、プロバイダーを比較できます。</p>
+  <h2>サービス提供者とは</h2>
+  <p>サービスを提供する提供者のことです。プロフィール、口コミ、サービス価格などの様々な情報から、提供者を比較できます。</p>
 </div>
 
 
@@ -124,11 +125,11 @@
   <div class="message-wrapper">
 
       <div class="heading">
-        <h2>あなたもプロバイダーとして参加しませんか？</h2>
+        <h2>あなたもサービス提供者として参加しませんか？</h2>
         <h3 id="tagline">Let's find customers who need you!</h3>
       </div>
       <div class="join-button">
-      <%= link_to "プロバイダーとして参加",'http://goo.gl/forms/y9P0l9bh5OFkPs1J3', class: "btn message signup-show" %>
+      <%= link_to "サービス提供者として参加",'http://goo.gl/forms/y9P0l9bh5OFkPs1J3', class: "btn message signup-show" %>
     </div>
     </div>
   </div>
