--- a/app/views/notes/new.html.erb
+++ b/app/views/notes/new.html.erb
@@ -30,18 +30,18 @@
     <tr>
      <th> <p><%= f.label Note.human_attribute_name 'サービスのタイトル' %> <span class="form-label required">必須</span></p></th>
      <td>
-      <%= b.text_field :title, class: 'form-control',placeholder:"サービス内容がわかるタイトルにしましょう" %>
+      <%= b.text_field :title, class: 'form-control',placeholder:"お客さんの目を引くようなタイトルを考えましょう" %>
     </td>
   </tr>
 
 
   <tr>
    <th>
-    <p><%= f.label Note.human_attribute_name '価格' %><span class="form-label required">必須</span></p></th>
+    <p><%= f.label Note.human_attribute_name '価格(税込)' %><span class="form-label required">必須</span></p></th>
     <td>
       <div class="input-group">
        <%= b.text_field :price, class: 'form-control', placeholder:"5000" %>
-       <span class="input-group-addon">円</span>
+       <span class="input-group-addon">円(税込)〜</span>
      </div>
    </td>
  </tr> 
@@ -112,7 +112,7 @@
  <td>
    <div class="middleform">
     <textarea class="form-control" placeholder="あなたのサービスについて詳しく説明しよう" name="note[note_revisions_attributes][0][cancelrule]" id="note_note_revisions_attributes_0_cancelrule">
-予約成立後の変更・キャンセルは、作業の6日前まで承ります。
+予約成立後の変更・キャンセルは、当日の6日前まで承ります。
 期限を過ぎてのキャンセルは、5日前から2日前までは予約金額の25%、前日までは50%、それ以降は100%のキャンセル料が発生することがございますので、ご了承ください。</textarea>
     </div>
   </td>
