--- a/app/assets/stylesheets/home/mobilehead.css
+++ b/app/assets/stylesheets/home/mobilehead.css
@@ -1,3 +1,7 @@
+ .wrapper{
+    width:100%;
+    margin:0 auto;
+}
  
 
  .upper-menu,.upper-menu ul li:hover{
@@ -12,7 +16,6 @@
  	background-color:#F5F5F5
  }
  .up-var{
-
  	padding-top:57px
  }
  .upper-menu{
@@ -20,17 +23,20 @@
  	height:50px;
  	cursor:pointer;
  	margin-top:-43px;
- 	margin-left:-170px;
+
  	border-top:2px solid #ebebeb;
  	border-bottom:2px solid #ebebeb;
  	transition:all .5s
  }
+  .upper-menu ul {
+    margin-left: 8%;
+  }
  .upper-menu ul li{
  	margin-top:16px;
  	text-transform:uppercase;
  	font-size:14px;
  	font-weight:700;
- 	width:13%;
+ 	width:10%;
  	float:left;
  	box-sizing:border-box;
  	border-right:1px solid #ebebeb;
