--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -7,14 +7,11 @@
 
   <h1>アカウント作成</h1>
 
- <div class="name_field">
+  <div class="field">
     <%= f.label :ユーザーネーム %><br />
     <%= f.text_field :name,  autofocus: true  %>
   </div>
 
-
-<%= f.hidden_field :mainpic, autofocus: true %>
-<%= f.hidden_field :profile, autofocus: true %>
 
 
   <div class="field">
@@ -34,6 +31,11 @@
     <%= f.label :パスワード確認 %><br />
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
   </div>
+
+
+
+<%= f.hidden_field :mainpic, autofocus: true %>
+<%= f.hidden_field :profile, autofocus: true %>
 
   <div class="actions">
     <%= f.submit "アカウントを作成する" , class: "log_button", id: "sign" %>
